--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cdk": "^1.98.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.6.0",
+    "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
